# fast-web

./: Cargo.toml  Readme.md
examples/: hello.rs
src/: lib.rs  router.rs
