[package]
name = "fast-router"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1"
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1", features = ["full"]}
urlencoding="2"
log="0.4"

[dev-dependencies]
env_logger="0.9"

[[example]]
name = "hello"
path = "examples/hello.rs"
