[package]
edition = "2018"
name = "fast-web"
version = "0.1.1"

description = "简化web开发的一个路由，参考了go语言gin的设计"
documentation = "http://noxue.com"
homepage = "http://noxue.com"
license-file = "LICENSE.txt"
repository = "https://gitee.com/noxue-com/fast-router"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
log = "0.4"
regex = "1"
tokio = {version = "1", features = ["full"]}
urlencoding = "2"

[dev-dependencies]
env_logger = "0.9"

[[example]]
name = "hello"
path = "examples/hello.rs"
